# aibox-image

./: .gitignore  aibox-image.code-workspace
app/: .gitignore  Cargo.toml  build.rs  config.toml
app/public/: index.html
app/src/: config.rs  error.rs  history.rs  history_panel.rs  image_canvas.rs  layer_system.rs  main.rs  mask_gallery.rs  msg_panel.rs  tools.rs  undo_redo.rs  worker.rs
app/src/ai_tools/: brush.rs  error.rs  inpaint.rs  mod.rs  selection.rs  zmq.rs
app/src/ai_tools/face_swap/: mod.rs  worker.rs
app/src/ai_tools/inpaint/: mod.rs  worker.rs
app/src/ai_tools/portrait/: mod.rs  worker.rs
app/src/ai_tools/selection/: mod.rs  worker.rs
app/src/ai_tools/transport/: error.rs  mod.rs  types.rs  zmq.rs
app/src/ai_tools/upscale/: mod.rs  worker.rs
app/src/image_canvas/: mod.rs  selection.rs
backend/: pyproject.toml
backend/aibox-image-lib/: pyproject.toml
backend/aibox-image-lib/src/aibox_image_lib/transport/: __init__.py  zmq.py
backend/caption-service/: .dockerignore  Dockerfile  pyproject.toml  service.py
backend/face-detection-service/: .dockerignore  Dockerfile  pyproject.toml  service.py
backend/face-swapping-service/: pyproject.toml
backend/face-swapping-service/src/face_swapping_service/: app.py  face_swapping.py  main.py  service.py
backend/image-rendering-service/: Dockerfile  cli.py  pyproject.toml  service.py
backend/inpainting-service/: hook-inpainting_service.py  pyproject.toml  service.py
backend/inpainting-service/src/inpainting_service/: app.py  main.py  service.py
backend/llm-service/: .dockerignore  Dockerfile  pyproject.toml  service.py
backend/portrait-editing-service/: pyproject.toml
backend/portrait-editing-service/.claude/: settings.local.json
backend/portrait-editing-service/src/portrait_editing_service/: __init__.py  app.py  main.py  portrait_editing.py  service.py
backend/selection-service/: pyproject.toml  service.py
backend/selection-service/src/selection_service/: app.py  main.py  object_detection.py  service.py
backend/src/backend/lib/: patch_torchvision.py
backend/src/backend/lib/transport/: __init__.py  zmq.py
backend/src/services/face_swapping/: __main__.py  app.py  face_swapping.py  service.py
backend/src/services/inpainting/: __main__.py  app.py  inpainting.py  service.py
backend/src/services/portrait_editing/: __main__.py  app.py  portrait_editing.py  service.py
backend/src/services/selection/: __main__.py  app.py  service.py
backend/src/services/upscaling/: __main__.py  app.py  service.py
backend/upscaling-service/: pyproject.toml
backend/upscaling-service/src/upscaling_service/: app.py  main.py  service.py  upscaling.py
launcher/: Cargo.toml  build.rs
launcher/src/: main.rs
