[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "msgpack>=1.1.1",
    "pydantic>=2.11.9",
    "pyright>=1.1.405",
    "pyzmq>=27.1.0",
    "ruff>=0.13.0",
    "python-dotenv>=1.1.1",

    "diffusers>=0.35.1",
    "opencv-python>=4.11.0.86",
    "transformers>=4.56.1",
    "accelerate>=1.10.1",
    "protobuf>=6.32.0",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "pillow>=11.3.0",
    "numpy>=1.24.0,<2.0.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.16.0",
    "huggingface_hub>=0.16.0",
    "gfpgan>=1.3.8",
    "ultralytics>=8.0.0",
    "scipy>=1.11.0",
    "onnxruntime>=1.18.0",
    "huggingface_hub>=0.20.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
lint.extend-select = ["I"]

[tool.pyright]
include = ["./src"]
