[project]
name = "aibox-image-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "msgpack>=1.1.1",
    "pydantic>=2.11.9",
    "pyzmq>=27.1.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
