[project]
name = "face-detection-service"
version = "0.1.0"
description = "High-performance face detection service using DeepFace"
authors = [
    {name = "Face Detection Service"}
]
requires-python = ">=3.9,<3.12"
dependencies = [
    # Core dependencies
    "pillow>=10.0.0",
    "numpy>=1.21.0",
    # IPC communication
    "pyzmq>=25.0.0",
    "msgpack>=1.0.0",
    # Face detection specific (from v1/pyproject.toml)
    "deepface==0.0.79",
    "keras>=2.12.0,<2.13.0",
    "opencv-python-headless>=4.8.0",
    "tensorflow>=2.12.0",
    "tensorrt>=10.13.2.6",
    "mediapipe>=0.10.21",
    "retina-face>=0.0.17",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.scripts]
face-detection-service = "service:main"

[tool.black]
line-length = 88
target-version = ['py39']

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
