[project]
name = "portrait-editing-service"
version = "0.1.0"
description = "portrait editing service"
requires-python = ">=3.10,<3.12"
dependencies = [
    "aibox-image-lib",
    "liveportrait",
    "onnxruntime==1.18.0",
    "onnxruntime-gpu==1.18.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "zmq>=0.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=23.0.0"]

[tool.uv.sources]
aibox-image-lib = { path = "../aibox-image-lib", editable = true }
liveportrait = { git = "https://github.com/framp/LivePortrait.git" }

[project.scripts]
service = "portrait_editing_service.main:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
